--- a/index.css
+++ b/index.css
@@ -2,8 +2,12 @@ body {
   background-color: lightblue;
 }
 
+.clicked{
+color: #474a4f;	
+}
+
 #title {
-color: #3c67ad;
+font-size: 50px;
 }
 
 h1 {
